<resources>
    <string name="app_name">Music Pod</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="portraitText">Portrait</string>
    <string name="landscapeText">Landscape</string>
    <string name="textviewofsongsname">TextViewOfSongsName</string>
    <string name="_3_45">3:45</string>
    <string name="_0_00">0:00</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="playlist">playlist</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="no_songs_added_to_favorite">No songs added to Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="songname">SONGNAME</string>
    <string name="name">name</string>
    <string name="duration">Duration</string>
    <string name="playlistname">playlistName</string>
    <string name="playlists">Playlists</string>
    <string name="ascending_order">Ascending order</string>
    <string name="descending_order">Descending order</string>

</resources>