<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:background="@drawable/alert_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_new_playlist"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

        <EditText
            android:id="@+id/write_playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/playlist_name"
            android:inputType="textPersonName"
             />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alertRecyclerViewForPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_background"
                android:text="@string/add"
                android:textColor="@color/violet" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:textColor="@color/violet"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>